[gd_scene load_steps=2 format=3 uid="uid://fxeytxo4oi2q"]

[ext_resource type="Script" path="res://Character/tool_bar.gd" id="1_gsy3n"]

[node name="ToolBar" type="Control"]
z_index = 2
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_gsy3n")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 740.0
offset_top = 895.0
offset_right = 780.0
offset_bottom = 935.0
scale = Vector2(0.842435, 0.798838)

[node name="GridContainer" type="GridContainer" parent="Control"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 0
offset_left = -878.406
offset_top = -1120.38
offset_right = -738.406
offset_bottom = -1080.38
scale = Vector2(3.56466, 3.38012)
columns = 4

[node name="Button1" type="Button" parent="Control/GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="SlotImage" type="TextureRect" parent="Control/GridContainer/Button1"]
layout_mode = 2
offset_left = 0.332981
offset_top = 0.371138
offset_right = 32.333
offset_bottom = 32.3711

[node name="Button2" type="Button" parent="Control/GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="SlotImage" type="TextureRect" parent="Control/GridContainer/Button2"]
layout_mode = 2
offset_left = 0.297081
offset_top = 0.371138
offset_right = 32.2971
offset_bottom = 32.3711

[node name="Button3" type="Button" parent="Control/GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="SlotImage" type="TextureRect" parent="Control/GridContainer/Button3"]
layout_mode = 2
offset_left = -0.0718155
offset_top = 0.371138
offset_right = 31.9282
offset_bottom = 32.3711

[node name="Button4" type="Button" parent="Control/GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="SlotImage" type="TextureRect" parent="Control/GridContainer/Button4"]
layout_mode = 2
offset_left = -0.107716
offset_top = 0.000791132
offset_right = 31.8923
offset_bottom = 32.0008

[connection signal="pressed" from="Control/GridContainer/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="Control/GridContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Control/GridContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Control/GridContainer/Button4" to="." method="_on_button_4_pressed"]
